# rust_projects

./: .gitignore
__dist/: planet_settings.json
gamescript/: Cargo.toml
gamescript/src/: bin_read_write.rs  file_read_write.rs  json_read_write.rs  lib.rs
gamescript/src/models/: color.rs  continent.rs  mod.rs  point.rs
gradient-rotations-image/: Cargo.toml  data.json
gradient-rotations-image/src/: main.rs
tectonic-process/: Cargo.toml
tectonic-process/src/: main.rs
world/: Cargo.toml  build-and-draw.bat  load-and-draw.bat
world-tweak/: Cargo.toml
world-tweak/src/: equalize_realms.rs  main.rs  seamless.rs
world-ui/: README.md  angular.json  package-lock.json  package.json
world-ui/app/: main.ts
world-ui/src/: index.html  styles.scss
world-ui/src/app/: app.component.spec.ts  app.component.ts
world-ui/src/app/detail/: detail.component.html
world-ui/src/app/home/: home.component.html  home.component.ts
world/src/: build_image.rs  build_voronoi.rs  cache.rs  continent_builder.rs  image_builder.rs  lib.rs  main.rs  pixels_utils.rs  seamless_continents.rs  voronoi_builder.rs
world/src/image_gradient/: mod.rs
world/src/models/: color.rs  continent.rs  point.rs
