[package]
name = "gamescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] } # https://docs.rs/serde/latest/serde/
serde_json = "1.0.108"
serde-binary = "0.5.0"
bincode = "1.3.3" # https://docs.rs/bincode/latest/bincode/
