[package]
name = "tectonic-process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7" # https://crates.io/crates/image
serde = { version = "1.0.190", features = ["derive"] } # https://docs.rs/serde/latest/serde/
gamescript = { path = "../gamescript/" }
