[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7" # https://crates.io/crates/image
num-complex = "0.4.4" # https://crates.io/crates/num-complex
rand = "0.8.5" # https://docs.rs/crate/rand/latest
voronoice = "0.2.0" # https://crates.io/crates/voronoice
prisma = "0.1.1" # https://docs.rs/prisma/latest/prisma/
serde = { version = "1.0.190", features = ["derive"] } # https://docs.rs/serde/latest/serde/
gamescript = { path = "../gamescript/" }
# lazy_static = "1.4.0" # https://docs.rs/lazy_static/latest/lazy_static/
once_cell = "1.18.0" # https://docs.rs/once_cell/latest/once_cell/
